<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface"
        tools:context=".MainActivity">

    <!-- Header -->
    <!-- Header -->
    <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:id="@+id/textViewAppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="?attr/colorPrimary"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"/>

        <TextView
                android:id="@+id/textViewHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_your_game"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="?attr/colorOnSurface"
                android:textAlignment="center"/>

    </LinearLayout>

    <!-- ScrollView for all cards -->
    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/headerLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
                android:id="@+id/linearLayoutStatic"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="80dp">

            <!-- Add Game button card -->
            <androidx.cardview.widget.CardView
                    android:id="@+id/buttonCard"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="8dp">

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="16dp"
                        >

                    <TextView
                            android:text="@string/add_game"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:layout_marginBottom="8dp"/>

                    <Button
                            android:id="@+id/button"
                            android:text="@string/plus_symbol"
                            android:textSize="24sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textColor="#FFFFFF"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <!-- History button in right bottom corner -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_history"
            android:contentDescription="@string/history_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:backgroundTint="@color/primary_color"
            app:tint="#FFFFFF"/>

    <!-- Theme switch button in left bottom corner -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnThemeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_theme_switch"
            android:contentDescription="@string/theme_switch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:backgroundTint="@color/primary_color"
            app:tint="#FFFFFF"/>

</androidx.constraintlayout.widget.ConstraintLayout>